--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,9 @@
               (dateChange)="taskFormControl.markAsTouched()"
             />
             <mat-datepicker-toggle matSuffix [for]="picker">
-              <mat-datepicker #picker disabled="false"></mat-datepicker>
+              <!-- https://angular.io/api/common/AsyncPipe -->
+              <!-- show the modal touchUi calendar on handsets -->
+              <mat-datepicker #picker disabled="false" [touchUi]="(isHandset | async)? 'true' : 'false'"></mat-datepicker>
             </mat-datepicker-toggle>
             <mat-error
               *ngIf="
