--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,10 +10,43 @@
   margin-bottom: 10px;
 }
 
+.margin-top-15px {
+  margin-top: 15px;
+}
+
+.margin-top-10px {
+  margin-top: 10px;
+}
+
+.padding-top-10px {
+  padding-top: 10px;
+}
+
+.padding-left-10px {
+  padding-left: 10px;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
 
+::ng-deep .todo.mat-card {
+  background-color: white !important;
+}
+
+::ng-deep .todo.mat-card:hover {
+  background-color: ghostwhite !important;
+}
 .content {
   padding: 3vw 2vw;
+}
+
+input {
+  font-size: 12px;
+}
+
+@media screen and (max-width: 600px) {
+  input {
+    font-size: 20px;
+  }
 }
