Fix full width on date picker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,10 +73,9 @@
               </mat-error>
             </mat-radio-group>
           </div>
-          <mat-form-field class="margin-bottom-15px" appearance="fill">
+          <mat-form-field class="margin-bottom-15px full-width" appearance="fill">
             <mat-label>Due Date</mat-label>
             <input
-              class="full-width"
               matInput
               [matDatepicker]="picker"
               formControlName="dueDate"
