--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,8 +117,9 @@
               type="submit"
               [disabled]="form.invalid"
             >
-              Add
+              {{ showUpdateButton? 'Add as New Todo' : 'Add'}}
             </button>
+            &nbsp;
             <button
               *ngIf="showUpdateButton"
               mat-raised-button
