--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   >
     <div
       fxLayout="row wrap"
-      fxLayout.lt-sm="column wrap"
+      fxLayout.lt-sm="row wrap"
       fxLayoutGap="10px grid"
     >
       <mat-card fxFlex="50%" fxFlex.lt-sm="100%">
