--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,8 +17,9 @@
 .margin-top-10px {
   margin-top: 10px;
 }
-.margin-bottom-10px {
-  margin-bottom: 10px;
+
+.margin-right-10px {
+  margin-right: 10px;
 }
 
 .padding-top-10px {
@@ -33,13 +34,22 @@
   flex: 1 1 auto;
 }
 
-::ng-deep .todo.mat-card {
-  background-color: white !important;
+// ::ng-deep .todo.mat-card {
+//   background-color: white !important;
+// }
+
+// ::ng-deep .todo.mat-card:hover {
+//   background-color: ghostwhite !important;
+// }
+
+.todo.mat-card {
+  border-radius: 8px;
 }
 
-::ng-deep .todo.mat-card:hover {
-  background-color: ghostwhite !important;
+.todo.mat-card:hover {
+  border: 2px solid thistle;
 }
+
 .content {
   padding: 3vw 2vw;
 }
@@ -69,9 +79,23 @@ input {
   content: "!! ";
 }
 
-.mat-button-toggle-group {
+.overdue {
+  font-weight: bold;
+}
+
+.mat-button-toggle-group.options {
   height: 24px;
   align-items: center;
+}
+
+.mat-button-toggle-group.toggle {
+  border-radius: 50%;
+  border: 0;
+}
+
+.mat-button-toggle-appearance-standard.toggle {
+  color: white;
+  background: none;
 }
 
 @media screen and (max-width: 600px) {
