--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<div class="content mat-app-background">
+<div class="content app-frame mat-app-background">
   <form
     [formGroup]="form"
     (ngSubmit)="addTodo(); formDirective.resetForm()"
