Make dark theme input text lighter

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,9 @@
 
 @include mat.core();
 
-$angular-primary: mat.define-palette(mat.$deep-purple-palette);
-$angular-accent: mat.define-palette(mat.$amber-palette);
+$angular-primary: mat.define-palette(mat.$deep-purple-palette, 500, 100, 900);
+$angular-primary-dark: mat.define-palette(mat.$deep-purple-palette, 400, 100, 900, 200);
+$angular-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
 
 $angular-warn: mat.define-palette(mat.$red-palette);
 
@@ -26,7 +27,7 @@ $angular-default-theme: mat.define-light-theme(
 $angular-dark-theme: mat.define-dark-theme(
   (
     color: (
-      primary: $angular-primary,
+      primary: $angular-primary-dark,
       accent: $angular-accent,
       warn: $angular-warn,
     ),
